--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "eat-da-burger-app",
   "version": "1.0.0",
-  "description": "This app is all about eating burgers, yes, that's right! You'll create a burger logger with MySQL, Node, Express, Handlebars and a homemade ORM (yum!). Be sure to follow the MVC design pattern; use Node and MySQL to query and route data in your app, and Handlebars to generate your HTML. * Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd like to eat. ```",
+  "description": "This app is all about eating burgers, yes, that's right! You'll create a burger logger with MySQL, Node, Express, Handlebars and a homemade ORM (yum!)."
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "exphbs": "^1.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {},
